fix: validate JMAP session and method responses